test/parser/should_fail/function2.souc.bad
import funcs

{;> this is the main routine. it returns no value. <;}
main() = do
	x <- f $ 42 ; a comment
	print x ;}

{;> this is the f function. <;}
f(x) = do
